--- a/app/views/barcodes/index.html.erb
+++ b/app/views/barcodes/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Barcodes</h1>
+<h1>Rails4andZxing. Barcode Scanner</h1>
 
 IP: <%= ip_address = Socket.ip_address_list.find { |ai| ai.ipv4? && !ai.ipv4_loopback? }.ip_address %>:<%= port =request.port.to_s %>
 </br></br>
